# CrazyBrick

./: .gitignore  BreakOut  BreakOut~Stashed changes  CMakeLists.txt  main.py  makefile
cmake_modules/: FindSDL2_image.cmake
include/: Game.h  Powerup.h  audiomanager.h  ball.h  brick.h  clock.h  config.h  game.h  level.h  level_selection.h  paddle.h  powerup.h  types.h  utils.h
levels/: format.md  level1.txt  level2.txt  level3.txt  xtreme_crazy_level.txt
src/: Game.cpp  Powerup.cpp  audiomanager.cpp  ball.cpp  brick.cpp  clock.cpp  game.cpp  level.cpp  level_selection.cpp  main.cpp  paddle.cpp  powerup.cpp  utils.cpp
